# LicensePlateDetection

./: CMakeLists.txt  README.md
include/: ConstantsDetectChars.h  ConstantsDetectPlates.h  ConstantsIdentifyPlate.h  ConstantsPreprocess.h  DetectChars.h  DetectPlates.h  IdentifyPlate.h  PossibleChar.h  PossiblePlate.h  Preprocess.h  ShowLicensePlateArgs.h
ressource/cmake/release/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_data_config.hpp  opencv_python_config.cmake  opencv_python_tests.cfg  version_string.tmp
ressource/cmake/release/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/apps/model-diagnostics/: Makefile  (+2 more)
ressource/cmake/release/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/lib/: libopencv_aruco.so.4.5.2  libopencv_barcode.so.4.5  libopencv_barcode.so.4.5.2  libopencv_bgsegm.so.4.5.2  libopencv_bioinspired.so.4.5.2  libopencv_calib3d.so.4.5.2  libopencv_ccalib.so.4.5.2  libopencv_datasets.so.4.5.2  libopencv_dnn_objdetect.so.4.5.2  libopencv_dnn_superres.so.4.5.2  libopencv_dpm.so.4.5.2  libopencv_face.so.4.5.2  libopencv_features2d.so.4.5.2  libopencv_flann.so.4.5.2  libopencv_freetype.so.4.5.2  libopencv_fuzzy.so.4.5.2  libopencv_hfs.so.4.5.2  libopencv_highgui.so.4.5.2  libopencv_img_hash.so.4.5.2  libopencv_imgcodecs.so.4.5.2  libopencv_intensity_transform.so.4.5.2  libopencv_line_descriptor.so.4.5.2  libopencv_mcc.so.4.5.2  libopencv_ml.so.4.5.2  libopencv_objdetect.so.4.5.2  libopencv_optflow.so.4.5.2  libopencv_phase_unwrapping.so.4.5.2  libopencv_photo.so.4.5.2  libopencv_plot.so.4.5.2  libopencv_quality.so.4.5.2  libopencv_rapid.so.4.5.2  libopencv_reg.so.4.5.2  libopencv_rgbd.so.4.5.2  libopencv_saliency.so.4.5.2  libopencv_shape.so.4.5.2  libopencv_stereo.so.4.5.2  libopencv_stitching.so.4.5.2  libopencv_structured_light.so.4.5.2  libopencv_superres.so.4.5.2  libopencv_surface_matching.so.4.5.2  (+10 more)
ressource/cmake/release/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ressource/cmake/release/opencv2/: opencv_modules.hpp
ressource/cmake/release/unix-install/: OpenCVConfig.cmake
src/: IdentifyPlate.cpp  Main.cpp  PossibleChar.cpp  PossiblePlate.cpp  Preprocess.cpp
src/demo/: CMakeLists.txt  Demo.cpp
src/lib/: CMakeLists.txt
src/lib/plate/: DetectChars.cpp  DetectPlates.cpp  IdentifyPlate.cpp  PossibleChar.cpp  PossiblePlate.cpp  Preprocess.cpp
src/plate/: CMakeLists.txt  DetectChars.cpp  DetectPlates.cpp  Main.cpp
(+506 files in other folders)
